epita: fixed footer wrong position on firefox, simpler extensions install guide

--- a/styles/epita.css
+++ b/styles/epita.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,7 +77,7 @@ li>* {
 }
 
 footer {
-    position: sticky;
+    position: fixed;
     left: 0;
     bottom: 0;
 
@@ -146,6 +147,7 @@ nav a.active {
     max-width: 1200px;
     flex: 1;
     padding: 3rem;
+    padding-bottom: 4rem;
 
     background-color: #FFFFFF;
 }
